invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_95.src
.IPPcode24
SETCHAR LF@a int@49